tests/machine/x/fs/sum_builtin.fs
open System

printfn "%A" (sum [1; 2; 3])
